Revision 86 	 2010-11-20 	 small typo 
Revision 85 	 2010-11-20 	 README 
Revision 84 	 2010-11-18 	 Change to create_revision_file 
Revision 83 	 2010-11-18 	 Lot of changes 
Revision 82 	 2010-11-18 	 Changing name in hgrc 
Revision 81 	 2010-11-17 	 small change 
Revision 80 	 2010-11-01 	 Fixing push_local_repos 
Revision 79 	 2010-11-01 	 General cleanup 
Revision 78 	 2010-11-01 	 Adding script to push all local repos 
Revision 77 	 2010-11-01 	 Fix for pysis cron job 
Revision 76 	 2010-11-01 	 Correcting cron entry for pysis 
Revision 75 	 2010-11-01 	 Deleting unnecessary entries from cron 
Revision 74 	 2010-11-01 	 aliasing py to ipython 2.7 
Revision 73 	 2010-10-21 	 changing virtualenv path 
Revision 72 	 2010-10-21 	 Adding PIP_DOWNLOAD_CACHE to profile 
Revision 71 	 2010-10-19 	 General cleanup 
Revision 70 	 2010-10-18 	 Adding bitbucket2github.sh to crontab 
Revision 69 	 2010-10-18 	 Adding bitbucket2github.sh 
Revision 68 	 2010-10-16 	 Small change to create_revision_file.sh 
Revision 67 	 2010-10-16 	 Changing logic in create_revision_file.sh 
Revision 66 	 2010-10-07 	 Cleanup to sourceforge scripts 
Revision 65 	 2010-09-30 	 Adding github and bitbucket backup to cron 
Revision 64 	 2010-09-30 	 Backup github and bitbucket to sourceforge 
Revision 63 	 2010-09-17 	 Chaning time of dropbox cron to let the mysql backup finish 
Revision 62 	 2010-09-15 	 Fixing path issue in drpbox backup script 
Revision 61 	 2010-09-15 	 Added script to backup to dropbox 
Revision 60 	 2010-09-09 	 Fixing Birthday reminedrs issue 
Revision 59 	 2010-09-07 	 Adding refresh planet to crontab 
Revision 58 	 2010-09-06 	 Adding blogs-planet to repos 
Revision 57 	 2010-08-31 	 Changing github url 
Revision 56 	 2010-08-30 	 Backup hg repos to github.com using hg-git 
Revision 55 	 2010-08-23 	 Changing Greetings app 
Revision 54 	 2010-08-10 	 Changing VERSION to version.py to make imports easier 