@@ -1,3 +1,4 @@
+Revision 87 	 2010-11-21 	 Mercurial related changes 
 Revision 86 	 2010-11-20 	 small typo 
 Revision 85 	 2010-11-20 	 README 
 Revision 84 	 2010-11-18 	 Change to create_revision_file 
